remove deprecated url api